# poe-stash-indexer

./: .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  asset_index.json  ci.nix  docker-compose.grafana.yml  docker-compose.production.yaml  docker-compose.yaml  flake.nix  grafana-datasources.yaml  otel-config.yaml  rust-toolchain  rust-toolchain.toml  shell.nix  tempo.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  docker-base.yml  docker.yml  rust.yml
aws-pipeline/: README.md  architecture.puml  diagram.py
configuration/: instantiate.sh
configuration/environments/: .env.development  .env.development.enc  .env.production.enc  .env.template  development.env  development.env.enc  production.env.enc
crates/indexer/: .env.example  Cargo.toml  Dockerfile  README.md
crates/indexer/config/: config.toml
crates/indexer/migrations/2021-06-20-094806_chunk_counter/: down.sql
crates/indexer/scripts/: run.sh
crates/indexer/src/: config.rs  filter.rs  main.rs  metrics.rs  resumption.rs  schema.rs  stash_record.rs
crates/indexer/src/sinks/: mod.rs  postgres.rs  rabbitmq.rs  s3.rs  sink.rs
crates/stash-api/: Cargo.toml  README.md
crates/stash-api/src/: lib.rs
crates/stash-api/src/async/: client.rs  indexer.rs  mod.rs
crates/stash-api/src/common/: change_id.rs  mod.rs  parse.rs  poe_api.rs  poe_ninja_client.rs  pst_api.rs  stash.rs
crates/stash-api/src/poe_api/: auth.rs  mod.rs  poe_stash_api.rs
crates/stash-api/src/sync/: fetcher.rs  indexer.rs  mod.rs  scheduler.rs  worker.rs
crates/stash-api/tests/: oauth.rs  smoke_test_pst_api.rs
crates/stash-differ/: .env.example  .gitignore  Cargo.toml  README.md
crates/stash-differ/src/: config.rs  differ.rs  main.rs  s3.rs  stash.rs  store.rs
crates/stash-differ/src/processing/: aggregation.rs
crates/trade-api/: Cargo.toml  Dockerfile  api.prod.http
crates/trade-api/benchmark/rw-lock/: plot.prod.html  plot_prod_raw.html
crates/trade-api/benchmark/trade-split/: plot.local-release.html  plot.local.html  plot.prod.html
crates/trade-api/scripts/: run.sh
crates/trade-api/src/: config.rs  main.rs  store.rs
crates/trade-api/src/api/: mod.rs
crates/trade-api/src/api/routes/: search.rs
crates/trade-api/src/metrics/: api.rs  mod.rs
crates/trade-common/: Cargo.toml
crates/trade-common/src/: assets.rs  league.rs  lib.rs  note_parser.rs  secret.rs  telemetry.rs
crates/trade-ingest/: Cargo.toml  Dockerfile  README.md
crates/trade-ingest/scripts/: run.sh
crates/trade-ingest/src/: config.rs  consumer.rs  main.rs  source.rs  store.rs
crates/trade-ingest/src/metrics/: mod.rs  store.rs
deployment/: nginx.conf
docs/: architecture.d2  architecture.md  problem.md  restart.sh
indexer/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
indexer/config/: config.toml
indexer/migrations/2020-06-11-182409_offers/: up.sql
indexer/migrations/2020-11-07-214742_stash_records/: down.sql  up.sql
indexer/migrations/2021-02-05-093327_created_at_index/: down.sql  up.sql
indexer/migrations/2021-04-25-122619_tick/: down.sql  up.sql
indexer/migrations/2021-04-25-172934_row_counter_pk/: down.sql  up.sql
indexer/migrations/2021-06-20-094806_chunk_counter/: down.sql  up.sql
indexer/scripts/: run.sh
indexer/src/: config.rs  filter.rs  indexer.rs  main.rs  metrics.rs  parser.rs  persistence.rs  resumption.rs  schema.rs  stash_record.rs
indexer/src/config/: config.rs  mod.rs  user_config.rs
indexer/src/sinks/: mod.rs  postgres.rs  rabbitmq.rs  sink.rs
infra/: Makefile  docker-compose.yaml
lib/: Cargo.toml
lib/src/: change_id.rs  client.rs  indexer.rs  lib.rs  poe_ninja_client.rs  types.rs
lib/src/indexer/: client.rs  indexer.rs  mod.rs
migrations/2020-06-11-182409_offers/: down.sql  up.sql
migrations/2020-06-16-140938_change_id_index/: down.sql  up.sql
monitoring/grafana/: Dockerfile  custom.ini
monitoring/prometheus/: Dockerfile  (+1 more)
nginx/: Dockerfile  default.conf  index.html
notes/: problem.md
rabbitmq/: Dockerfile  rabbitmq.conf
reverse-proxy/: .htpasswd  Dockerfile
river-subscription/: Cargo.toml
scripts/: export-trade-store.sh
src/: client.rs  indexer.rs  main.rs  parser.rs  persistence.rs  schema.rs
stash-api/: Cargo.toml
stash-api/src/: lib.rs
stash-api/src/async/: indexer.rs
stash-api/src/common/: change_id.rs  mod.rs  poe_ninja_client.rs
stash-api/src/sync/: fetcher.rs  indexer.rs  mod.rs  poe_ninja_client.rs  scheduler.rs  worker.rs
stash-differ/: .env  Cargo.toml  README.md  sample_raw.csv  session_items_sample.csv  todo.md
stash-differ/examples/: simple-diff.rs
stash-differ/src/: db.rs  differ.rs  lib.rs  main.rs  stash.rs  store.rs
stash-differ/src/processing/: flat.rs  mod.rs
terraform/: README.md  main.tf
trade/: Cargo.toml  Dockerfile  README.md  api.http  asset_index.json
trade-api/: .gitignore  Cargo.toml  Dockerfile  README.md  api.http  api.prod.http
trade-api/benchmark/: .gitignore  Makefile  targets.local.txt
trade-api/benchmark/bodies/: chaos-fusing.json  chaos-map.json  chaos-nonexistent.json
trade-api/benchmark/rw-lock/: plot_prod_rwlock.html
trade-api/scripts/: run.sh
trade-api/src/: api.rs  assets.rs  main.rs  source.rs  store.rs
trade-api/src/api/: middleware.rs  mod.rs
trade-api/src/api/routes/: healthcheck.rs  mod.rs  search.rs
trade-api/src/metrics/: api.rs  mod.rs  store.rs
trade-common/: Cargo.toml
trade-ingest/: Cargo.toml  Dockerfile  api.prod.http
trade-ingest/benchmark/: targets.prod.txt
trade-ingest/benchmark/bodies/: chaos-exalted.json
trade-ingest/migrations/: 20220410120816_initial.sql  20220410223159_indexes.sql  20220819172317_indexes_hc.sql
trade-ingest/scripts/: run.sh
trade-ingest/src/: assets.rs  config.rs  consumer.rs  main.rs  note_parser.rs  source.rs  store.rs
trade-ingest/src/metrics/: mod.rs  store.rs
trade/src/: api.rs  assets.rs  config.rs  consumer.rs  main.rs  metrics.rs  note_parser.rs  source.rs  store.rs
trade/src/metrics/: mod.rs
(+43 files in other folders)
