[package]
name = "poe-stash-indexer"
version = "0.1.0"
authors = ["Maximilian Stock <me@maximumstock.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3.9"
lazy_static = "1.4.0"
diesel = { version = "1.4.4", features = ["postgres", "numeric"] }
dotenv = "0.15.0"
ratelimit = "0.4.4"

