[workspace]

members = [
    "crates/indexer",
    "crates/stash-api",
    "crates/stash-differ",
    "crates/trade-ingest",
    "crates/trade-api",
    "crates/trade-common",
]

resolver = "1"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
debug = true
