[package]
name = "indexer"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
stash-api = { path = "../stash-api" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
config = "0.13.1"
signal-hook = "0.3.13"
amiquip = "0.4.2"
prometheus_exporter = "0.8.4"

[[bin]]
name = "indexer"
path = "src/main.rs"
