[package]
name = "indexer"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
stash-api = { path = "../stash-api", features = ["sync"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
config = "0.13.2"
signal-hook = "0.3.14"
amiquip = "0.4.2"
prometheus_exporter = "0.8.5"

[[bin]]
name = "indexer"
path = "src/main.rs"
