[package]
name = "lib"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.18"
serde = "1.0.117"
ureq = "1.5.1"
serde_json = "1.0.59"
ratelimit = "0.4.4"
