[package]
name = "stash-api"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
log = "0.4.17"
ureq = { version = "2.5.0", optional = true }
ratelimit = { version = "0.4.4", optional = true }
reqwest = { version = "0.11.11", features = [
    "json",
    "async-compression",
], optional = true }
tokio = { version = "1.20.1", features = [], optional = true }
governor = { version = "0.4.2", optional = true }
futures = { version = "0.3.21", optional = true }
bytes = { version = "1.2.1", optional = true }

[features]
sync = ["dep:ureq", "dep:ratelimit"]
async = ["dep:tokio", "dep:governor", "dep:reqwest", "dep:futures", "dep:bytes"]
