[package]
name = "stash-api"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
ureq = { version = "2.5.0", optional = true }
ratelimit = { version = "0.4.4", optional = true }
reqwest = { version = "0.11.13", features = [
    "json",
    "async-compression",
], optional = true }
tokio = { version = "1.23.0", features = [], optional = true }
governor = { version = "0.5.0", optional = true }
futures = { version = "0.3.25", optional = true }
bytes = { version = "1.3.0", optional = true }

[features]
sync = ["dep:ureq", "dep:ratelimit"]
async = ["dep:tokio", "dep:governor", "dep:reqwest", "dep:futures", "dep:bytes"]
