[package]
name = "stash-differ"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.62"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "json" ] }
tokio = { version = "1.4.0", features = [ "full" ] }
futures = "0.3.14"

[[bin]]
name = "stash-differ"
