[package]
name = "stash-differ"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# csv = "1.1.6"
csv = { git = "https://github.com/gootorov/rust-csv.git", rev = "31d1105f9ee50bf02dff178f20be4a1ec9fdff2d" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
] }
tokio = { version = "1.17.0", features = ["full"] }
chrono = "0.4.19"
log = "0.4.14"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"

[[bin]]
name = "stash-differ"
