[package]
name = "trade-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
signal-hook = "0.3.14"
tokio = { version = "1.20.1", features = ["full"] }
typed-builder = "0.10.0"
prometheus_exporter = "0.8.4"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.4"
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
trade-common = { path = "../trade-common" }
axum = "0.5.14"
tower = "0.4.13"
tower-http = "0.3.4"
