[package]
name = "trade-ingest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lapin = "2.1.1"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
signal-hook = "0.3.13"
tokio = { version = "1.17.0", features = ["full"] }
typed-builder = "0.10.0"
prometheus_exporter = "0.8.4"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.5.13", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
scooby = "0.4.0"
trade-common = { path = "../trade-common" }
