[package]
name = "trade-ingest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lapin = "2.1.1"
regex = "1.6.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
signal-hook = "0.3.14"
tokio = { version = "1.20.1", features = ["full"] }
prometheus_exporter = "0.8.4"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.4"
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
scooby = "0.4.0"
trade-common = { path = "../trade-common" }
