[package]
name = "trade"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
lapin = "1.7.1"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
signal-hook = "0.3.9"
tokio = { version = "1.16.1", features = ["full"] }
tokio-amqp = "1.0.0"
typed-builder = "0.9.0"
warp = "0.3.1"
