[package]
name = "trade"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lapin = "2.0.2"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
signal-hook = "0.3.13"
tokio = { version = "1.17.0", features = ["full"] }
typed-builder = "0.10.0"
warp = "0.3.2"
prometheus_exporter = "0.8.4"
