[package]
name = "indexer"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
chrono = { version = "0.4.42", default-features = true, features = ["serde"] }
stash-api = { path = "../stash-api", default-features = false }
signal-hook = { version = "0.3.18", default-features = false }
prometheus_exporter = { version = "0.8.5", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["full"] }
futures = { version = "0.3.31", default-features = false }
tracing = { version = "0.1.41", default-features = false }
trade-common = { path = "../trade-common", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
lapin = { version = "3.7.2", default-features = false }
aws-sdk-s3 = { version = "1.115.0", default-features = false }
aws-types = { version = "1.3.6", default-features = false }
aws-config = { version = "1.8.11", default-features = false }
aws-credential-types = { version = "1.2.10", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib"] }
jsonl = { version = "4.0.1", default-features = false }

[[bin]]
name = "indexer"
path = "src/main.rs"
