[package]
name = "stash-api"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.9", features = [
    "json",
    "rustls-tls",
], default-features = false }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = { version = "0.3.31" }
bytes = { version = "1.10.1" }
serde_urlencoded = "0.7.1"
trade-common = { path = "../trade-common" }
tracing = "0.1.41"
