[package]
name = "stash-differ"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
stash-api = { path = "../stash-api" }
signal-hook = "0.3.17"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.41"
trade-common = { path = "../trade-common" }
aws-sdk-s3 = "1.68.0"
aws-types = "1.3.4"
aws-config = "1.5.14"
aws-credential-types = "1.2.1"
flate2 = "1.0.35"
jsonl = "4.0.1"
anyhow = "1.0.95"

[[bin]]
name = "stash-differ"
