[package]
name = "stash-differ"
version = "0.1.0"
authors = ["Maximilian Stock <mxmlnstock@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
stash-api = { path = "../stash-api" }
signal-hook = "0.4.1"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.44"
trade-common = { path = "../trade-common" }
aws-sdk-s3 = "1.119.0"
aws-types = "1.3.6"
aws-config = "1.8.12"
aws-credential-types = "1.2.10"
flate2 = "1.1.8"
jsonl = "4.0.1"
anyhow = "1.0.100"

[[bin]]
name = "stash-differ"
