[package]
name = "trade-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.3.18"
tokio = { version = "1.47.1", features = ["full"] }
typed-builder = "0.22.0"
prometheus_exporter = "0.8.5"
tracing = "0.1.37"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
trade-common = { path = "../trade-common" }
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
