[package]
name = "trade-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
signal-hook = "0.4.1"
tokio = { version = "1.48.0", features = ["full"] }
typed-builder = "0.23.2"
prometheus_exporter = "0.8.5"
tracing = "0.1.44"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
trade-common = { path = "../trade-common" }
axum = "0.8.8"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
