[package]
name = "trade-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.11.20", features = [
    "json",
    "rustls-tls",
], default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
opentelemetry = { version = "0.23.0" }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16.0"
tracing-opentelemetry = "0.24.0"
tracing = "0.1.37"
reqwest-tracing = { version = "0.4.6", features = ["opentelemetry_0_19"] }
reqwest-middleware = "0.2.3"
regex = "1.11.1"
chrono = { version = "0.4.39", default-features = true, features = ["serde"] }
