[package]
name = "trade-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.23", features = [
  "json",
  "rustls-tls",
], default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
opentelemetry = { version = "0.23.0" }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16.0"
tracing-opentelemetry = "0.24.0"
tracing = "0.1.37"
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_22"] }
reqwest-middleware = "0.4.2"
regex = "1.11.2"
chrono = { version = "0.4.42", default-features = true, features = ["serde"] }
reqwest-leaky-bucket = "0.4.0"
