[package]
name = "trade-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
lapin = "2.3.4"
regex = "1.11.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
signal-hook = "0.3.15"
tokio = { version = "1.42.0", features = ["full"] }
prometheus_exporter = "0.8.5"
tracing = "0.1.37"
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
trade-common = { path = "../trade-common" }
